# eely

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
examples/00_clip/: CMakeLists.txt
examples/00_clip/src/example_clip/: app_example_clip.cpp  app_example_clip.h  main.cpp
examples/01_blend/: CMakeLists.txt
examples/01_blend/res/: run_crouch.fbx  walk.fbx  walk_crouch.fbx
examples/01_blend/src/example_blend/: app_example_blend.cpp  app_example_blend.h  main.cpp
examples/01_btree/: CMakeLists.txt
examples/01_btree/res/: look_-45.fbx  look_45.fbx
examples/01_btree/src/example_btree/: app_example_btree.cpp  app_example_btree.h  main.cpp
examples/02_additive/: CMakeLists.txt
examples/02_additive/res/: jog.fbx  run.fbx
examples/02_additive/src/example_additive/: app_example_additive.cpp  app_example_additive.h  main.cpp
examples/03_state_machine/: CMakeLists.txt
examples/03_state_machine/res/: block_idle.fbx  block_start.fbx  cast_0.fbx  idle.fbx  idle_flex.fbx  slash_0.fbx
examples/03_state_machine/src/example_state_machine/: app_example_state_machine.cpp  app_example_state_machine.h  main.cpp
examples/03_state_machine_simple/: CMakeLists.txt
examples/03_state_machine_simple/res/: idle.fbx  taunt.fbx
examples/03_state_machine_simple/src/example_state_machine_simple/: app_example_state_machine_simple.cpp  app_example_state_machine_simple.h  main.cpp
examples/04_state_machine_complex/: CMakeLists.txt
examples/04_state_machine_complex/res/: cast_1.fbx  slash_1.fbx
examples/04_state_machine_complex/src/example_state_machine_complex/: app_example_state_machine_complex.cpp  app_example_state_machine_complex.h  main.cpp
extras/eely_editor/: CMakeLists.txt
extras/eely_editor/src/eely_editor/: app_editor.cpp  app_editor.h  main.cpp
libs/eely/: CMakeLists.txt
libs/eely/include/eely/: assert.h  axis_system.h  base_utils.h  bit_reader.h  bit_writer.h  clip.h  clip_compression.h  clip_player_base.h  clip_player_compressed_fixed.h  clip_player_uncompressed.h  clip_uncooked.h  clip_utils.h  float3.h  graph.h  math_utils.h  measurement_unit.h  project.h  project_uncooked.h  quaternion.h  resource.h  resource_base.h  resource_uncooked.h  skeleton.h  skeleton_pose.h  skeleton_uncooked.h  string_id.h  transform.h
libs/eely/include/eely/anim_graph/: anim_graph.h  anim_graph_base.h  anim_graph_base_uncooked.h  anim_graph_node_and.h  anim_graph_node_base.h  anim_graph_node_blend.h  anim_graph_node_clip.h  anim_graph_node_param.h  anim_graph_node_param_comparison.h  anim_graph_node_random.h  anim_graph_node_speed.h  anim_graph_node_state.h  anim_graph_node_state_condition.h  anim_graph_node_state_machine.h  anim_graph_node_state_transition.h  anim_graph_node_sum.h  anim_graph_player.h  anim_graph_player_context.h  anim_graph_player_node_and.h  anim_graph_player_node_base.h  anim_graph_player_node_blend.h  anim_graph_player_node_clip.h  anim_graph_player_node_param.h  anim_graph_player_node_param_comparison.h  anim_graph_player_node_pose_base.h  anim_graph_player_node_random.h  anim_graph_player_node_speed.h  anim_graph_player_node_state.h  anim_graph_player_node_state_condition.h  anim_graph_player_node_state_machine.h  anim_graph_player_node_state_transition.h  anim_graph_player_node_sum.h  anim_graph_uncooked.h
libs/eely/include/eely/base/: assert.h  base_utils.h  bit_reader.h  bit_writer.h  graph.h  string_id.h  time_utils.h
libs/eely/include/eely/btree/: btree.h  btree_node_add.h  btree_node_base.h  btree_node_blend.h  btree_node_clip.h  btree_player.h  btree_player_node_add.h  btree_player_node_base.h  btree_player_node_blend.h  btree_player_node_clip.h  btree_uncooked.h
libs/eely/include/eely/clip/: clip.h  clip_compression_scheme.h  clip_cooking_none_fixed.h  clip_cursor.h  clip_impl_acl.h  clip_impl_base.h  clip_impl_fixed.h  clip_impl_none.h  clip_player_acl.h  clip_player_base.h  clip_player_fixed.h  clip_player_none.h  clip_uncooked.h  clip_utils.h
libs/eely/include/eely/job/: job_add.h  job_base.h  job_blend.h  job_clip.h  job_play.h  job_queue.h  job_restore.h  job_save.h
libs/eely/include/eely/math/: ellipse.h  elliptical_cone.h  float2.h  float3.h  float4.h  math_utils.h  quantization.h  quaternion.h  transform.h
libs/eely/include/eely/params/: params.h
libs/eely/include/eely/project/: project.h  project_uncooked.h  resource.h  resource_base.h  resource_uncooked.h
libs/eely/include/eely/skeleton/: presets.h  skeleton.h  skeleton_pose.h  skeleton_pose_pool.h  skeleton_uncooked.h  skeleton_utils.h
libs/eely/src/eely/: bit_reader.cpp  bit_writer.cpp  clip.cpp  clip_player_base.cpp  clip_player_compressed_fixed.cpp  clip_player_uncompressed.cpp  clip_uncooked.cpp  clip_utils.cpp  float3.cpp  math_utils.cpp  project.cpp  project_uncooked.cpp  quaternion.cpp  resource.cpp  resource_base.cpp  resource_uncooked.cpp  skeleton.cpp  skeleton_pose.cpp  skeleton_uncooked.cpp  string_id.cpp  transform.cpp
libs/eely_app/: CMakeLists.txt
libs/eely_app/include/eely_app/: anim_graph_editor.h  app.h  asset_map.h  asset_material.h  asset_mesh.h  asset_uniform.h  base_utils.h  component_anim_graph.h  component_camera.h  component_clip.h  component_skeleton.h  component_transform.h  filesystem_utils.h  inputs.h  matrix4x4.h  scene.h  system_camera.h  system_render.h  system_skeleton.h
libs/eely_app/res/: solid.fs
libs/eely_app/src/eely_app/: anim_graph_editor.cpp  app.cpp  asset_material.cpp  asset_mesh.cpp  asset_uniform.cpp  filesystem_utils.cpp  inputs.cpp  matrix4x4.cpp  scene.cpp  system_camera.cpp  system_render.cpp  system_skeleton.cpp
libs/eely_importer/: CMakeLists.txt
libs/eely_importer/include/eely_importer/: importer.h
libs/eely_importer/src/eely_importer/: importer.cpp
tests/: .clang-tidy  CMakeLists.txt
tests/src/tests/: base_utils.cpp  bit_reader_and_bit_writer.cpp  ellipse.cpp  elliptical_cone.cpp  float3.cpp  graph.cpp  math_utils.cpp  matrix4x4.cpp  quantization.cpp  quaternion.cpp  skeleton_and_clip.cpp  skeleton_pose.cpp  string_id.cpp  test_utils.h  transform.cpp
(+144 files in other folders)
