project(eely)

set(SOURCE_FILES
    include/eely/anim_graph/anim_graph_node_base.h
    include/eely/anim_graph/anim_graph_node_and.h
    include/eely/anim_graph/anim_graph_node_blend.h
    include/eely/anim_graph/anim_graph_node_clip.h
    include/eely/anim_graph/anim_graph_node_param_comparison.h
    include/eely/anim_graph/anim_graph_node_param.h
    include/eely/anim_graph/anim_graph_node_random.h
    include/eely/anim_graph/anim_graph_node_speed.h
    include/eely/anim_graph/anim_graph_node_state_condition.h
    include/eely/anim_graph/anim_graph_node_state_machine.h
    include/eely/anim_graph/anim_graph_node_state_transition.h
    include/eely/anim_graph/anim_graph_node_state.h
    include/eely/anim_graph/anim_graph_node_sum.h
    include/eely/anim_graph/anim_graph_player_context.h
    include/eely/anim_graph/anim_graph_player_node_and.h
    include/eely/anim_graph/anim_graph_player_node_base.h
    include/eely/anim_graph/anim_graph_player_node_blend.h
    include/eely/anim_graph/anim_graph_player_node_clip.h
    include/eely/anim_graph/anim_graph_player_node_param_comparison.h
    include/eely/anim_graph/anim_graph_player_node_param.h
    include/eely/anim_graph/anim_graph_player_node_random.h
    include/eely/anim_graph/anim_graph_player_node_speed.h
    include/eely/anim_graph/anim_graph_player_node_pose_base.h
    include/eely/anim_graph/anim_graph_player_node_state_condition.h
    include/eely/anim_graph/anim_graph_player_node_state_machine.h
    include/eely/anim_graph/anim_graph_player_node_state_transition.h
    include/eely/anim_graph/anim_graph_player_node_state.h
    include/eely/anim_graph/anim_graph_player_node_sum.h
    include/eely/anim_graph/anim_graph_player.h
    include/eely/anim_graph/anim_graph_uncooked.h
    include/eely/anim_graph/anim_graph.h
    include/eely/base/assert.h
    include/eely/base/base_utils.h   
    include/eely/base/bit_reader.h
    include/eely/base/bit_writer.h
    include/eely/base/graph.h
    include/eely/base/string_id.h
    include/eely/base/time_utils.h
    include/eely/clip/clip_compression_scheme.h
    include/eely/clip/clip_cooking_none_fixed.h
    include/eely/clip/clip_cursor.h
    include/eely/clip/clip_impl_acl.h
    include/eely/clip/clip_impl_base.h
    include/eely/clip/clip_impl_fixed.h
    include/eely/clip/clip_impl_none.h
    include/eely/clip/clip_player_acl.h
    include/eely/clip/clip_player_base.h
    include/eely/clip/clip_player_fixed.h
    include/eely/clip/clip_player_none.h
    include/eely/clip/clip_uncooked.h
    include/eely/clip/clip_utils.h
    include/eely/clip/clip.h
    include/eely/job/job_add.h
    include/eely/job/job_base.h
    include/eely/job/job_blend.h
    include/eely/job/job_clip.h
    include/eely/job/job_queue.h
    include/eely/job/job_restore.h
    include/eely/job/job_save.h
    include/eely/math/float3.h
    include/eely/math/float4.h
    include/eely/math/math_utils.h
    include/eely/math/quantization.h
    include/eely/math/quaternion.h
    include/eely/math/transform.h
    include/eely/project/axis_system.h
    include/eely/project/measurement_unit.h
    include/eely/project/project_uncooked.h
    include/eely/project/project.h
    include/eely/project/resource_base.h
    include/eely/project/resource_uncooked.h
    include/eely/project/resource.h
    include/eely/skeleton/skeleton_pose_pool.h
    include/eely/skeleton/skeleton_pose.h
    include/eely/skeleton/skeleton_uncooked.h
    include/eely/skeleton/skeleton_utils.h
    include/eely/skeleton/skeleton.h
    include/eely/skeleton_mask/skeleton_mask_uncooked.h
    include/eely/skeleton_mask/skeleton_mask.h
    src/eely/anim_graph/anim_graph_node_and.cpp
    src/eely/anim_graph/anim_graph_node_base.cpp
    src/eely/anim_graph/anim_graph_node_blend.cpp
    src/eely/anim_graph/anim_graph_node_clip.cpp
    src/eely/anim_graph/anim_graph_node_param_comparison.cpp
    src/eely/anim_graph/anim_graph_node_param.cpp
    src/eely/anim_graph/anim_graph_node_random.cpp
    src/eely/anim_graph/anim_graph_node_speed.cpp
    src/eely/anim_graph/anim_graph_node_state_condition.cpp
    src/eely/anim_graph/anim_graph_node_state_machine.cpp
    src/eely/anim_graph/anim_graph_node_state_transition.cpp
    src/eely/anim_graph/anim_graph_node_state.cpp
    src/eely/anim_graph/anim_graph_node_sum.cpp
    src/eely/anim_graph/anim_graph_player_node_and.cpp
    src/eely/anim_graph/anim_graph_player_node_base.cpp
    src/eely/anim_graph/anim_graph_player_node_blend.cpp
    src/eely/anim_graph/anim_graph_player_node_clip.cpp
    src/eely/anim_graph/anim_graph_player_node_param_comparison.cpp
    src/eely/anim_graph/anim_graph_player_node_param.cpp
    src/eely/anim_graph/anim_graph_player_node_random.cpp
    src/eely/anim_graph/anim_graph_player_node_speed.cpp
    src/eely/anim_graph/anim_graph_player_node_pose_base.cpp
    src/eely/anim_graph/anim_graph_player_node_state_condition.cpp
    src/eely/anim_graph/anim_graph_player_node_state_machine.cpp
    src/eely/anim_graph/anim_graph_player_node_state_transition.cpp
    src/eely/anim_graph/anim_graph_player_node_state.cpp
    src/eely/anim_graph/anim_graph_player_node_sum.cpp
    src/eely/anim_graph/anim_graph_player.cpp
    src/eely/anim_graph/anim_graph_uncooked.cpp
    src/eely/anim_graph/anim_graph.cpp
    src/eely/base/bit_reader.cpp
    src/eely/base/bit_writer.cpp
    src/eely/base/string_id.cpp
    src/eely/clip/clip_cooking_none_fixed.cpp
    src/eely/clip/clip_cursor.cpp
    src/eely/clip/clip_impl_acl.cpp
    src/eely/clip/clip_impl_fixed.cpp
    src/eely/clip/clip_impl_none.cpp
    src/eely/clip/clip_player_acl.cpp
    src/eely/clip/clip_player_fixed.cpp
    src/eely/clip/clip_player_none.cpp
    src/eely/clip/clip_uncooked.cpp
    src/eely/clip/clip_utils.cpp
    src/eely/clip/clip.cpp
    src/eely/job/job_base.cpp
    src/eely/job/job_queue.cpp
    src/eely/math/float3.cpp
    src/eely/math/quantization.cpp
    src/eely/math/quaternion.cpp
    src/eely/math/transform.cpp
    src/eely/params/params.cpp
    src/eely/project/project_uncooked.cpp
    src/eely/project/project.cpp
    src/eely/project/resource_base.cpp
    src/eely/project/resource_uncooked.cpp
    src/eely/project/resource.cpp
    src/eely/skeleton/skeleton_pose_pool.cpp
    src/eely/skeleton/skeleton_pose.cpp
    src/eely/skeleton/skeleton_uncooked.cpp
    src/eely/skeleton/skeleton.cpp
    src/eely/skeleton_mask/skeleton_mask_uncooked.cpp
    src/eely/skeleton_mask/skeleton_mask.cpp)

add_library(${PROJECT_NAME} ${SOURCE_FILES})
target_include_directories(${PROJECT_NAME} PUBLIC include)
target_link_libraries(${PROJECT_NAME} PUBLIC external_acl external_fmt external_gsl)
target_compile_definitions(${PROJECT_NAME} PUBLIC $<$<CONFIG:DEBUG>:EELY_DEBUG>)

if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -pedantic -Werror)
endif()